WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114403
Set trap is not being called for API objects
https://bugs.webkit.org/show_bug.cgi?id=114403
Summary
Set trap is not being called for API objects
Oliver Hunt
Reported
2013-04-10 18:15:27 PDT
Set trap is not being called for API objects
Attachments
Patch
(6.18 KB, patch)
2013-04-10 18:16 PDT
,
Oliver Hunt
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2013-04-10 18:16:50 PDT
Created
attachment 197458
[details]
Patch
Oliver Hunt
Comment 2
2013-04-10 18:24:04 PDT
Committed
r148162
: <
http://trac.webkit.org/changeset/148162
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug