Set trap is not being called for API objects https://bugs.webkit.org/show_bug.cgi?id=114403

Reviewed by Anders Carlsson.

Intercept putByIndex on the callback object and add tests
to make sure we don't regress in future.

* API/JSCallbackObject.h:
(JSCallbackObject):
* API/JSCallbackObjectFunctions.h:
(JSC::::putByIndex):
(JSC):
* API/tests/testapi.c:
(PropertyCatchalls_setProperty):
* API/tests/testapi.js:

Canonical link: https://commits.webkit.org/132778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148162 268f45cc-cd09-0410-ab3c-d52691b4dbfc